tests/ui/iterators/iter-macro-not-async-closure.wide.stderr
error[E0277]: the trait bound `{gen closure@$DIR/iter-macro-not-async-closure.rs:26:21: 26:28}: AsyncFnOnce()` is not satisfied
  --> $DIR/iter-macro-not-async-closure.rs:32:34
   |
LL |     let x = pin!(call_async_once(f));
   |                  --------------- ^ the trait `AsyncFnOnce()` is not implemented for `{gen closure@$DIR/iter-macro-not-async-closure.rs:26:21: 26:28}`
   |                  |
   |                  required by a bound introduced by this call
   |
note: required by a bound in `call_async_once`
  --> $DIR/iter-macro-not-async-closure.rs:21:34
   |
LL | async fn call_async_once(f: impl AsyncFnOnce()) {
   |                                  ^^^^^^^^^^^^^ required by this bound in `call_async_once`

error[E0277]: the trait bound `{gen closure@$DIR/iter-macro-not-async-closure.rs:26:21: 26:28}: AsyncFnOnce()` is not satisfied
  --> $DIR/iter-macro-not-async-closure.rs:32:18
   |
LL |     let x = pin!(call_async_once(f));
   |                  ^^^^^^^^^^^^^^^^^^ the trait `AsyncFnOnce()` is not implemented for `{gen closure@$DIR/iter-macro-not-async-closure.rs:26:21: 26:28}`
   |
note: required by a bound in `call_async_once`
  --> $DIR/iter-macro-not-async-closure.rs:21:34
   |
LL | async fn call_async_once(f: impl AsyncFnOnce()) {
   |                                  ^^^^^^^^^^^^^ required by this bound in `call_async_once`

error[E0277]: the trait bound `{gen closure@$DIR/iter-macro-not-async-closure.rs:26:21: 26:28}: AsyncFnOnce()` is not satisfied
  --> $DIR/iter-macro-not-async-closure.rs:32:13
   |
LL |     let x = pin!(call_async_once(f));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsyncFnOnce()` is not implemented for `{gen closure@$DIR/iter-macro-not-async-closure.rs:26:21: 26:28}`
   |
note: required by a bound in `call_async_once`
  --> $DIR/iter-macro-not-async-closure.rs:21:34
   |
LL | async fn call_async_once(f: impl AsyncFnOnce()) {
   |                                  ^^^^^^^^^^^^^ required by this bound in `call_async_once`
   = note: this error originates in the macro `pin` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `{gen closure@$DIR/iter-macro-not-async-closure.rs:26:21: 26:28}: AsyncFnOnce()` is not satisfied
  --> $DIR/iter-macro-not-async-closure.rs:36:5
   |
LL |     x.poll(&mut Context::from_waker(Waker::noop()));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsyncFnOnce()` is not implemented for `{gen closure@$DIR/iter-macro-not-async-closure.rs:26:21: 26:28}`
   |
note: required by a bound in `call_async_once`
  --> $DIR/iter-macro-not-async-closure.rs:21:34
   |
LL | async fn call_async_once(f: impl AsyncFnOnce()) {
   |                                  ^^^^^^^^^^^^^ required by this bound in `call_async_once`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
